--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@midwayjs/core": "^3.0.0",
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
+    "@vueuse/integrations": "^9.1.0",
     "element-plus": "^2.2.13",
     "koa-static-cache": "^5.1.4",
     "midway-schedule": "^2.0.0",
@@ -18,6 +19,7 @@
     "ssr-hoc-vue3": "^6.0.0",
     "store2": "^2.14.2",
     "swiper": "6.7.5",
+    "universal-cookie": "^4.0.4",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0",
